add content pages and layoput

--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -5,8 +5,8 @@
                 <p>
                     The theme of this blog is open sourced on <a
                         href="https://github.com/.github.io/{{ .Site.Params.github }}"
-                        target="_blank" id="repo">GitHub</a> by {{ .Site.Params.twitter}}<a
-                        href="https://twitter.com/{{ .Site.Params.twitter}}" target="_blank" id="twitter"></a>.
+                        target="_blank" id="repo">GitHub</a> by <a
+                        href="https://twitter.com/{{ .Site.Params.twitter }}" target="_blank" id="twitter">{{ .Site.Params.twitter }}</a>.
                 </p>
             </div>
         </div>
