--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -11,13 +11,13 @@
         <nav class="offset-3 col-6">
             <ul class="list-group list-group-horizontal justify-content-center ml-0 pl-0">
                 <li class="list-group-item border-0">
-                    <a href=""><i class="fas fa-home text-black-50"></i></a>
+                    <a href="{{ .Site.Params.home }}"><i class="fas fa-home text-black-50"></i></a>
                 </li>
                 <li class="list-group-item border-0">
                     <a href="/aboutme"><i class="fas fa-address-card text-black-50"></i></a>
                 </li>
                 <li class="list-group-item border-0">
-                    <a href=""><i class="fas fa-comment-alt text-black-50"></i></a>
+                    <a href="{{ .Site.Params.blog }}"><i class="fas fa-comment-alt text-black-50"></i></a>
                 </li>
                 <li class="list-group-item border-0">
                     <a href="/contact"><i class="fas fa-envelope-open text-black-50"></i></a>
