implement pages layouts

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -12,8 +12,8 @@
             {{ partial "header.html" }}
         </div>
     </div>
-    {{ partial "footer.html" }}
-    {{ partial "analytics.html" }}
+    {{ partial "footer.html" . }}
+    {{ partial "analytics.html" . }}
 </body>
 
 </html>
