--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -4,7 +4,7 @@
             <div class="offset-md-4 col-md-4 col-10 offset-1">
                 <p>
                     The theme of this blog is open sourced on <a
-                        href="https://github.com/.github.io/{{ .Site.Params.github }}"
+                        href="https://github.com/{{ .Site.Params.github }}.github.io"
                         target="_blank" id="repo">GitHub</a> by <a
                         href="https://twitter.com/{{ .Site.Params.twitter }}" target="_blank" id="twitter">{{ .Site.Params.twitter }}</a>.
                 </p>
