--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -15,7 +15,7 @@
 {{ if .Date }}
 <link rel="stylesheet" href="/css/postStyle.css">
 <link rel="stylesheet" href="/css/vendor/monokai.css">
-<meta content='{{ $.Site.Params.homepage }}' property='og:url' />
+<meta content='{{ $.Site.BaseURL }}' property='og:url' />
 <meta content="{{ .Content | plainify | truncate 120 }}" property='og:description' />
 <meta content="article" property="og:type" />
 <meta content='{{ .Title }} - {{ .Site.Params.title }}'  property='og:title' />
@@ -23,25 +23,25 @@
 {{ else if and .Permalink "autopage_collection" }}
 <title>{{ .Title }} - {{ .Site.Params.title }}</title>
 <meta content='{{ .Site.Params.title }}' property='og:title' />
-<meta content='{{ .Site.Params.homepage }}' property='og:url' />
+<meta content='{{ .Site.BaseURL }}' property='og:url' />
 <meta content="{{ .Site.Params.description }}" property='og:description' />
 <meta content="blog" property="og:type" />
 {{ else if and .Permalink "/tag/" }}
 <title>{{ .Title }} - {{ .Site.Params.title }}</title>
 <meta content='{{ .Site.Params.title }}' property='og:title' />
-<meta content='{{ .Site.Params.homepage }}' property='og:url' />
+<meta content='{{ .Site.BaseURL }}' property='og:url' />
 <meta content="{{ .Site.Params.description }}" property='og:description' />
 <meta content="blog" property="og:type" />
 {{ else if and .Permalink "/category/" }}
 <title>{{ .Title }} - {{ .Site.Params.title }}</title>
 <meta content='{{ .Site.Params.title }}' property='og:title' />
-<meta content='{{ .Site.Params.homepage }}' property='og:url' />
+<meta content='{{ .Site.BaseURL }}' property='og:url' />
 <meta content="{{ .Site.Params.description }}" property='og:description' />
 <meta content="blog" property="og:type" />
 {{ else }}
-<title>{{ .Site.Params.title }}</title>
-<meta content='{{ .Site.Params.title }}' property='og:title' />
-<meta content='{{ .Site.Params.homepage }}' property='og:url' />
+<title>{{ .Site.Title }}</title>
+<meta content='{{ .Site.Title }}' property='og:title' />
+<meta content='{{ .Site.BaseURL }}' property='og:url' />
 <meta content="{{ .Site.Params.description }}" property='og:description' />
 <meta content="blog" property="og:type" />
 {{ end }}
