add context to head

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -2,18 +2,19 @@
 <html>
 
 <head>
-    {{ partial "head.html" }}
+    {{ partial "head.html" . }}
 </head>
 
 <body class="bg-body d-flex flex-column min-vh-100">
     <div class="row align-items-center h-main m-0 p-0">
-        {{ partial "fork.html" }}
+        {{ partial "fork.html" . }}
         <div class="h-25">
-            {{ partial "header.html" }}
+            {{ partial "header.html" . }}
         </div>
     </div>
     {{ partial "footer.html" . }}
     {{ partial "analytics.html" . }}
+
 </body>
 
 </html>
