add links to socials nav

--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -29,19 +29,19 @@
         <nav class="offset-3 col-6">
             <ul class="list-group list-group-horizontal justify-content-center">
                 <li class="list-group-item border-0">
-                    <a href="https://github.com/"><i
+                    <a href="https://github.com/{{ .Site.Params.github }}"><i
                             class="fab fa-github text-black-50"></i></a>
                 </li>
                 <li class="list-group-item border-0">
-                    <a href="https://www.linkedin.com/in/"><i
+                    <a href="https://www.linkedin.com/in/{{ .Site.Params.linkedin }}"><i
                             class="fab fa-linkedin-in text-black-50"></i></a>
                 </li>
                 <li class="list-group-item border-0">
-                    <a href="https://twitter.com/"><i
+                    <a href="https://twitter.com/{{ .Site.Params.twitter }}"><i
                             class="fab fa-twitter text-black-50"></i></a>
                 </li>
                 <li class="list-group-item border-0">
-                    <a rel="me" href=""><i class="fab fa-mastodon text-black-50"></i></a>
+                    <a rel="me" href="https://mastodon.com/@{{ .Site.Params.mastodon }}"><i class="fab fa-mastodon text-black-50"></i></a>
                 </li>
             </ul>
         </nav>
